加上定时了

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,19 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            //选择要添加的对应cpu类型的.so库。
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+            // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
+        }
+
+        // Cmake
+        externalNativeBuild {
+            cmake {
+                cppFlags ""
+                abiFilters "armeabi", "armeabi-v7a"
+            }
+        }
     }
 
     signingConfigs {
@@ -38,6 +51,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation files('libs/droidlogic.jar')
+    implementation files('libs/droidlogic-tv.jar')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
