--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao' // 应用插件
 
 android {
     compileSdkVersion 28
@@ -49,6 +50,15 @@ android {
     }
 }
 
+greendao {
+    // 指定数据库schema版本号，迁移等操作会用到
+    schemaVersion 1
+    // 设置生成数据库文件的目录，默认是在build中，可以将生成的文件放到我们的java目录中
+    targetGenDir 'src/main/java'
+    // 设置生成的数据库相关文件的包名，默认为entity所在的包名
+    daoPackage 'com.zhdj.greendao.gen'
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation files('libs/droidlogic.jar')
@@ -83,4 +93,5 @@ dependencies {
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
     //轮播图
     implementation 'com.youth.banner:banner:1.4.10'
+    implementation 'org.greenrobot:greendao:3.2.2' // 添加依赖
 }
