--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,13 @@ buildscript {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
-
+        // 添加仓库
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
-        
+        // 添加插件
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
