--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.activity.LaunchActivity">
+        <activity android:name=".view.activity.ShowMessageNewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,7 +31,7 @@
         <activity android:name=".view.activity.ShowVideoActivity" />
         <activity android:name=".view.activity.ShowWordActivity" />
         <activity android:name=".view.activity.ShowMessageActivity" />
-        <activity android:name=".view.activity.ShowMessageNewActivity" />
+<!--        <activity android:name=".view.activity.ShowMessageNewActivity" />-->
         <activity android:name=".view.activity.ListActivity" />
 
         <service android:name=".view.service.GetTimeService" />
