--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,11 @@ greendao {
     // 设置生成的数据库相关文件的包名，默认为entity所在的包名
     daoPackage 'com.zhdj.greendao.gen'
 }
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
