--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:sharedUserId="android.uid.system"
-    package="com.zhdj.zhdj">
+    package="com.zhdj.zhdj"
+    android:sharedUserId="android.uid.system">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -17,7 +17,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.activity.ShowMessageNewActivity">
+        <activity
+            android:name=".view.activity.ShowMessageNewActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,7 +34,7 @@
         <activity android:name=".view.activity.ShowVideoActivity" />
         <activity android:name=".view.activity.ShowWordActivity" />
         <activity android:name=".view.activity.ShowMessageActivity" />
-<!--        <activity android:name=".view.activity.ShowMessageNewActivity" />-->
+        <!--        <activity android:name=".view.activity.ShowMessageNewActivity" />-->
         <activity android:name=".view.activity.ListActivity" />
 
         <service android:name=".view.service.GetTimeService" />
