--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".view.activity.ShowMessageNewActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar">
+        <activity android:name=".view.activity.ShowMessageNewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
