--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.zhdj.zhdj"
-    android:sharedUserId="android.uid.system">
+    package="com.zhdj.zhdj">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -27,11 +26,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.activity.MainActivity" />
-        <activity android:name=".view.activity.SleepActivity" />
         <activity android:name=".view.activity.ShowImageActivity" />
         <activity android:name=".view.activity.ShowVideoActivity" />
         <activity android:name=".view.activity.ShowWordActivity" />
-        <activity android:name=".view.activity.ShowMessageActivity" />
         <!--        <activity android:name=".view.activity.ShowMessageNewActivity" />-->
         <activity android:name=".view.activity.ListActivity" />
 
@@ -42,18 +39,6 @@
         <receiver android:name=".view.receiver.AlarmReceiver">
             <intent-filter>
                 <action android:name="intent_alarm_log" />
-            </intent-filter>
-        </receiver>
-        <receiver
-            android:name=".view.receiver.ScreenOffAdminReceiver"
-            android:label="@string/app_name"
-            android:permission="android.permission.BIND_DEVICE_ADMIN">
-            <meta-data
-                android:name="android.app.device_admin"
-                android:resource="@xml/device_admin" />
-
-            <intent-filter>
-                <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
             </intent-filter>
         </receiver>
     </application>
